--- a/ui.html
+++ b/ui.html
@@ -6,8 +6,13 @@
   body {
     margin: 16;
   }
-  p {
+  p, ul {
     font-size: 12;
+  }
+  .quote {
+    margin-bottom: 16;
+    background-color: #F3F3F3;
+    padding: 8 0 8 0;
   }
   .flex-row {
     display: flex;
@@ -18,29 +23,57 @@
   .row {
     margin-right: 16;
   }
+  .flex-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 16 0 16 0;
+  }
 </style>
 <body>
-  <div class="onboarding-tip" style="background-color:antiquewhite;">
-    <div class="icon icon--alert"></div>
-    <div class="onboarding-tip__msg">使用 Material 3 的 token 逻辑</div>
+  <p>Use color token structure of Material 3:</p>
+  <div class="quote">
+    <ul>
+      <li>
+        [themeName]
+        <ul>
+          <li>
+            ref
+            <ul>
+              <li>blue/100</li>
+              <li>blue/200</li>
+              <li>...</li>
+            </ul>
+          </li>
+          <li>
+            sys
+            <ul>
+              <li>primary</li>
+              <li>on-primary</li>
+              <li>...</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </div>
+  <p>This plugin will help you generate sys tokens, based on the token links from a basic theme.</p>
   <div class="flex-row">
-    <div class="label">参考主题:</div>
+    <div class="label">Basic theme:</div>
     <div style="width: 500">
-      <select id="theme-select" class="select-menu" onchange="defaultThemeChanged()"></select>
+      <select id="theme-select" class="select-menu" onchange="defaultThemeChanged()">
+      </select>
     </div>
   </div>
-  <div class="flex-row">
-    <button class='button button--primary row' id="generate">Generate</button>
-    <button class='button button--secondary' onclick="quit()">Close</button>
-    <!-- <div class="icon-button" id="refresh" onclick="refresh()">
-      <div class="icon icon--swap"></div>
-    </div> -->
+  <div class="flex-col">
+    <button class='button button--primary' id="generate" style="width: 100%; margin-bottom: 8">Generate sys tokens for all themes</button>
+    <button class='button button--secondary' onclick="quit()" style="width: 100%;">Close plugin</button>
   </div>
   <div class="flex-row" >
     <div class="row" id="sys-tokens"></div>
     <div id="ref-tokens"></div>
   </div>
+  
   <!-- <p id="token-links">default</p> -->
 </body>
 
@@ -50,8 +83,8 @@ document.getElementById('generate').onclick = () => {
   parent.postMessage({ pluginMessage: { type: 'generate' } }, '*')
 }
 let themeSelect = document.getElementById('theme-select')
-// const tokenList = document.getElementById('token-links')
 
+// const tokenList = document.getElementById('token-links')
 onmessage = (event) => {
   const msg = event.data.pluginMessage
   if (msg.themeNameList != null){
@@ -80,8 +113,17 @@ function defaultThemeChanged(){
 }
 
 function updateTokenLinks(sysLinks){
+  if (sysLinks.length == 0){
+    const sysTokenList = document.getElementById('sys-tokens')
+    sysTokenList.innerHTML = `<div class="label" style="color: black;">no sys tokens, please choose the theme with full tokens</div>`
+    const refTokenList = document.getElementById('ref-tokens')
+    refTokenList.innerHTML = ``
+    return
+  }
   const sysTokenList = document.getElementById('sys-tokens')
+  sysTokenList.innerHTML = `<div class="label" style="color: black; background: #F3F3F3">sys token</div>`
   const refTokenList = document.getElementById('ref-tokens')
+  refTokenList.innerHTML = `<div class="label" style="color: black; background: #F3F3F3" >ref token</div>`
   sysLinks.forEach(sysLink => {
     sysLink.linkPaints.forEach(paint => {
       if (paint.isDynamic){
