--- a/ui.html
+++ b/ui.html
@@ -67,7 +67,13 @@
   </div>
   <div class="flex-col">
     <button class='button button--primary' id="generate" style="width: 100%; margin-bottom: 8">Generate sys tokens for all themes</button>
+    <div class="import button button--secondary" style="width: 100%; margin-bottom: 8">
+      <label for="input-file" style="white-space:nowrap">Import Color Styles (JSON)</label>
+      <input type="file" id="input-file" onchange="importColorAssets()" accept=".json" >
+    </div>
     <button class='button button--secondary' onclick="quit()" style="width: 100%;">Close plugin</button>
+    
+    
   </div>
   <div class="flex-row" >
     <div class="row" id="sys-tokens"></div>
@@ -84,6 +90,10 @@ document.getElementById('generate').onclick = () => {
 }
 let themeSelect = document.getElementById('theme-select')
 
+const inputFile = document.getElementById('input-file')
+inputFile.style.opacity = 0
+
+
 // const tokenList = document.getElementById('token-links')
 onmessage = (event) => {
   const msg = event.data.pluginMessage
@@ -95,6 +105,24 @@ onmessage = (event) => {
     // tokenList.textContent = JSON.stringify(msg.sysLinks)
   }
 }
+
+function importColorAssets(){
+  
+  let fileContent;
+
+  const file = inputFile.files[0];
+  const fileReader = new FileReader();
+  fileReader.onload = function(fileLoadedEvent){
+      fileContent = fileLoadedEvent.target.result;
+  };
+
+  fileReader.readAsText(file);
+  fileReader.onloadend = () => {
+    console.log(fileContent)
+    parent.postMessage({ pluginMessage: { type: 'import-color-styles', colorTexts:fileContent } }, '*')
+  }
+}
+
 
 function updateSelectionList(themeNameList){
   themeSelect.innerHTML=""
